--- a/UNIDAD 7/U7T1/01_AJAX-HolaMundoMejorado.html
+++ b/UNIDAD 7/U7T1/01_AJAX-HolaMundoMejorado.html
@@ -53,7 +53,7 @@
   </head>
 
   <body>
-    <form action="">
+    <form>
       <input type="text" name="campoTexto" id="campoTexto" />
       <button id="boton" type="button">Mostrar Contenido</button>
       <br />
