--- a/UNIDAD 7/U7T3/index.html
+++ b/UNIDAD 7/U7T3/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>U7T2</title>
+    <title>U7T3</title>
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form>
-      <label for="texto">Localidad: </label>
-      <input type="text" name="texto" id="texto" />
-      <button type="button" id="boton">Enviar</button>
-      <div id="resultado"></div>
-    </form>
+    <button type="button" id="boton">Cargar Series</button>
+    <div id="container"></div>
   </body>
 </html>
